--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "tonalys",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Naofel EL ALOUANI",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
