--- a/angular.json
+++ b/angular.json
@@ -119,7 +119,8 @@
               "src/global.scss",
               "src/theme/variables.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "codeCoverage": true
           },
           "configurations": {
             "ci": {
