cd: deploy on release

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,9 +1,8 @@
 name: Deploy PWA to GitHub Pages
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+  release:
+    types: [published]
 
 env:
   CI: false
