--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href /tonalys/",
+    "build": "ng build --base-href /Tonalys/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
