--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,4 +1,4 @@
-name: Release Tonaly
+name: Release Tonalys
 
 on:
   push:
@@ -25,6 +25,11 @@ jobs:
           VERSION=${GITHUB_REF#refs/tags/}
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
+      - name: Set version in package.json
+        run: |
+          VERSION=${{ steps.get_version.outputs.version }}
+          jq '.version="'$VERSION'"' package.json > tmp.$$.json && mv tmp.$$.json package.json
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -38,7 +43,6 @@ jobs:
 
       - name: Zip build folder with version
         run: |
-          cd /home/runner/work/Tonalys/Tonalys
           zip -r tonalys-${{ steps.get_version.outputs.version }}.zip ./www/browser
 
       - name: Create GitHub Release with versioned asset
