--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -3,7 +3,7 @@
   "index": "/index.html",
   "assetGroups": [
     {
-      "name": "Tonalys",
+      "name": "app",
       "installMode": "prefetch",
       "resources": {
         "files": [
@@ -26,9 +26,5 @@
         ]
       }
     }
-  ],
-  "navigationUrls": [
-    "/**",
-    "!/**/*.{js,css,svg,png,cur,jpg,jpeg,gif,webp,avif,ico,woff,woff2,otf,ttf}"
   ]
 }
