--- a/angular.json
+++ b/angular.json
@@ -18,8 +18,8 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/app",
-            "index": "src/index.html",
-            "browser": "src/main.ts",
+            "index": "src/infrastructure/web/app/index.html",
+            "browser": "src/infrastructure/web/app/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -32,7 +32,7 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/infrastructure/web/app/styles.scss"
             ],
             "scripts": []
           },
